-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.0.0 Beta 1, 5.0.0 RC 1, 5.0.0
-
None
-
OS X 10.7.4, Windows
-
af13c79b30c1c8d5a5de6fd0e942c57b53fab9b4 77308b46784310028b1210f5c85727f90803e409
The methon QApplication::setWindowIcon() no longer set the dock icon in OS X. It also doesn't set the default icon in window title bars.
It doesn't seem to work in Windows 7 on setting the icon in taskbar, either.
- is replaced by
-
QTBUG-43999 QApplication::setWindowIcon is no longer changing the dock icon on OSX
-
- Closed
-
- relates to
-
QTBUG-27299 There's no setWindowFilePath hook in QPlatformWindow
-
- Closed
-
For Gerrit Dashboard: QTBUG-27175 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
37294,3 | Implement setWindowIcon() for Windows. | master | qt/qtbase | Status: MERGED | +2 | 0 |